--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,6 @@ before_script:
   - android-wait-for-emulator
   - sleep 10
   - adb shell input keyevent 82
+
+notifications:
+  slack: conference-chat:aHFbcU1mKNEqOqpWST95iedP
