--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="62305bc70d8643906aaa10de99a0bc9f2d8c2512" />
     </application>
 
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
