--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,8 @@ before_script:
   - sleep 10
   - adb shell input keyevent 82
 
+after_success:
+  - ./gradlew crashlyticsUploadDistributionDebug
+
 notifications:
   slack: conference-chat:aHFbcU1mKNEqOqpWST95iedP
