--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,9 @@ before_script:
 
 after_success:
   - ./gradlew crashlyticsUploadDistributionDebug
+  - mkdir -p app/build/reports/jacoco/test/
+  - cp app/build/reports/coverage/debug/report.xml app/build/reports/jacoco/test/jacocoTestReport.xml
+  - ./gradlew coveralls
 
 notifications:
   slack: conference-chat:aHFbcU1mKNEqOqpWST95iedP
