--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ android {
         debug {
             testCoverageEnabled true
             ext.betaDistributionGroupAliases="testers"
+            ext.betaDistributionReleaseNotesFilePath="crashlytics_release_notes.txt"
         }
         release {
             minifyEnabled false
